# simulation-urdf

./: Board.SLDPRT  Buoy_Akash.SLDASM  README.md
Buoy/: Buoy.SLDPRT
Buoy/Buoy_URDF/: CMakeLists.txt
Buoy/Buoy_URDF/meshes/: Board_2.STL
Buoy_Akash/: package.xml
Buoy_Akash/launch/: display.launch  gazebo.launch
Buoy_Akash/meshes/: Board_1.STL  Board_2.STL  Board_3.STL  base_link.STL
Buoy_Akash/urdf/: Buoy_Akash.csv  Buoy_Akash.urdf
Buoy_URDF/: model.config  package.xml
Gate_URDF/: CMakeLists.txt  package.xml
Gate_URDF/config/: joint_names_Gate_URDF.yaml
Gate_URDF/launch/: display.launch  gazebo.launch
Gate_URDF/meshes/: Middle.STL  base_link.STL  center.STL  left.STL  right.STL
Gate_URDF/urdf/: Gate_URDF.csv  Gate_URDF.urdf
Gate_URDF_NEW/: CMakeLists.txt  package.xml
Gate_URDF_NEW/config/: joint_names_Gate_URDF_NEW.yaml
Gate_URDF_NEW/launch/: display.launch  gazebo.launch
Gate_URDF_NEW/meshes/: Left.STL  Middle.STL  Right.STL  base_link.STL
Gate_URDF_NEW/urdf/: Gate_URDF_NEW.csv  Gate_URDF_NEW.urdf
Grabber_URDF/: CMakeLists.txt  package.xml
Grabber_URDF/config/: joint_names_Assem grabber.SLDASM.yaml
Grabber_URDF/launch/: display.launch  gazebo.launch
Grabber_URDF/meshes/: Arm_2.STL  Arm_3.STL  Arm_Link_1.STL  Arm_Link_4.STL  Flexible_link_1.STL  Flexible_link_2.STL  Flexible_link_3.STL  Flexible_link_4.STL  Slider.STL  base_link.STL
Grabber_URDF/urdf/: Assem grabber.SLDASM.csv  Assem grabber.SLDASM.urdf
